tests/negative/test_expr_ind_bad_type.orb
fnc main() {
    i32 x = 100;
    x[0];
}